--- a/Hack/package.json
+++ b/Hack/package.json
@@ -10,11 +10,19 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@mdi/js": "^7.4.47",
+        "@mdi/react": "^1.6.1",
+        "@reduxjs/toolkit": "^2.2.3",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.2",
+        "react-router-dom": "^6.23.0",
+        "redux": "^5.0.1",
+        "styled-components": "^6.1.9"
     },
     "devDependencies": {
+        "@types/node": "^20.12.8",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
