--- a/Hack/package.json
+++ b/Hack/package.json
@@ -15,6 +15,8 @@
         "@reduxjs/toolkit": "^2.2.3",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
+        "react-dnd": "^16.0.1",
+        "react-dnd-html5-backend": "^16.0.1",
         "react-dom": "^18.2.0",
         "react-redux": "^9.1.2",
         "react-router-dom": "^6.23.0",
