--- a/Hack/package.json
+++ b/Hack/package.json
@@ -13,6 +13,7 @@
         "@mdi/js": "^7.4.47",
         "@mdi/react": "^1.6.1",
         "@reduxjs/toolkit": "^2.2.3",
+        "axios": "^1.6.8",
         "firebase": "^10.11.1",
         "prettier": "^3.2.5",
         "react": "^18.2.0",
